[ICU-5606] fixed most of the logger issues, modified logging messages, overhauled the batch file, added a status bar, added safeguards against many exceptions, added some documentation, still plenty left to do X-Commit-URL: https://ssl.icu-project.org/trac/changeset/21153 Former-commit-id: bf7159fe2209d042336432c876adbe5ba2f81a90